# meme-wars

./: Cargo.toml  README.md  metadata.json
mcg/: Cargo.toml
mcg/src/: catalog.rs  constants.rs  crypto.rs  game.rs  lib.rs  types.rs
meme-wars/: Cargo.toml
meme-wars/src/: cards.json  catalog.rs  game.rs  icon  lib.rs  net.rs  rng.rs  snapshot.rs  types.rs
pkg/: manifest.json
test/: tests.toml
test/mcg-test/: Cargo.toml  metadata.json
test/mcg-test/api/: hyperapp_skeleton_test:template.os-v0.wit
test/mcg-test/mcg-test/: Cargo.toml
test/mcg-test/mcg-test/src/: lib.rs
test/mcg-test/pkg/: manifest.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/store/: mcg.ts
ui/src/types/: global.ts  mcg.ts  shims.d.ts
