[dependencies]
anyhow = "1.0"
process_macros = "0.1"
rand = "0.8"
rand_pcg = "0.3"
rmp-serde = "1.3"
serde_json = "1.0"
sha2 = "0.10"
wit-bindgen = "0.42.1"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "aaf7e02"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "e8b065179ce5d15893a23142416e59c87e0f31f6"

[dependencies.mcg_caller_utils]
optional = true
path = "../target/mcg-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["mcg_caller_utils"]

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "mcg"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
