[dependencies]
anyhow = "1.0"
hyperapp_macro = "0.2.0"
process_macros = "0.1"
rand = "0.8"
rand_pcg = "0.3"
rmp-serde = "1.3"
serde_json = "1.0"
sha2 = "0.10"
wit-bindgen = "0.42.1"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
version = "3.0.0"

[dependencies.mcg_caller_utils]
optional = true
path = "../target/mcg-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["mcg_caller_utils"]

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "meme-wars"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
